--- a/app/src/main/res/layout/personal_run_frag.xml
+++ b/app/src/main/res/layout/personal_run_frag.xml
@@ -34,7 +34,7 @@
 
     </RelativeLayout>
 
-    <com.n1njac.yiqipao.android.view.ArcView
+    <com.n1njac.yiqipao.android.ui.widget.DistanceDisplayArcView
         android:id="@+id/arc_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
