修改个人信息界面ui

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -43,4 +43,8 @@
 
     <color name="textColor">#ff6610</color>
 
+
+    <color name="startcolor">#50C81AFA</color>
+    <color name="endcolor">#907529FD</color>
+
 </resources>
