--- a/app/src/main/res/layout/personal_run_frag.xml
+++ b/app/src/main/res/layout/personal_run_frag.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
+    android:id="@+id/user_run_info_relat"
+    android:background="@drawable/bg_run"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -16,6 +18,7 @@
             android:drawableLeft="@drawable/plan_zzz"
             android:drawablePadding="5dp"
             android:textSize="16sp"
+            android:textColor="#fff"
             android:layout_marginLeft="45dp"
             android:text="设置锻炼计划"
             android:layout_width="wrap_content"
@@ -26,6 +29,7 @@
             android:drawablePadding="5dp"
             android:clickable="true"
             android:textSize="16sp"
+            android:textColor="#fff"
             android:layout_marginRight="45dp"
             android:layout_alignParentRight="true"
             android:text="查看历史路程"
