--- a/app/src/main/res/layout/user_info_frag.xml
+++ b/app/src/main/res/layout/user_info_frag.xml
@@ -1,112 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:id="@+id/user_info_dis_linear"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <com.n1njac.yiqipao.android.ui.widget.BezierView
 
             android:id="@+id/bezier_bg"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
             android:background="@drawable/user_info_frag_bg"
             app:background_style="sand"
             app:shader_mode="LinearGradient"
-            app:shader_style="left_bottom"
-            android:layout_width="match_parent"
-            android:layout_height="400dp" />
+            app:shader_style="left_bottom" />
+
+        <ImageView
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="25dp"
+            android:id="@+id/user_info_setting_iv"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="end"
+            android:src="@drawable/setting" />
+
         <LinearLayout
-            android:layout_gravity="center"
-            android:orientation="vertical"
-            android:gravity="center_horizontal"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/user_icon_iv"
-                app:civ_border_color="@android:color/white"
-                app:civ_border_width="3dp"
-                android:src="@drawable/icon"
                 android:layout_width="100dp"
-                android:layout_height="100dp" />
+                android:layout_height="100dp"
+                android:src="@drawable/icon"
+                app:civ_border_color="@android:color/white"
+                app:civ_border_width="3dp" />
 
             <TextView
                 android:id="@+id/user_id_tv"
-                android:textColor="@color/text_white"
-                android:layout_marginTop="10dp"
-                android:textStyle="bold"
-                android:textSize="18sp"
-                android:text="N1njaC"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="N1njaC"
+                android:textColor="@color/text_white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
-                android:textColor="@color/text_white"
                 android:id="@+id/user_signature_tv"
-                android:text="read the fucking source code"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text="read the fucking source code"
+                android:textColor="@color/text_white" />
         </LinearLayout>
 
     </FrameLayout>
 
     <LinearLayout
-        android:orientation="vertical"
-        android:background="#000"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#000"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <LinearLayout
-                android:gravity="center"
-                android:layout_marginTop="20dp"
-                android:orientation="vertical"
                 android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:layout_weight="1"
-                android:layout_height="wrap_content">
+                android:gravity="center"
+                android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/user_run_count_tv"
-                    android:textColor="#783AFF"
-                    android:text="4"
-                    android:textSize="30sp"
-                    android:textStyle="bold"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:text="4"
+                    android:textColor="#783AFF"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
 
                 <TextView
-                    android:textColor="#783AFF"
-                    android:text="@string/user_info_run_count"
-
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+
+                    android:text="@string/user_info_run_count"
+                    android:textColor="#783AFF" />
             </LinearLayout>
+
             <LinearLayout
-                android:layout_marginTop="20dp"
-                android:gravity="center"
-                android:orientation="vertical"
                 android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:layout_weight="1"
-                android:layout_height="wrap_content">
+                android:gravity="center"
+                android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/user_info_distance_tv"
-                    android:textColor="#783AFF"
-                    android:text="12.3"
-                    android:textSize="30sp"
-                    android:textStyle="bold"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:text="12.3"
+                    android:textColor="#783AFF"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
 
                 <TextView
 
-                    android:text="@string/user_info_run_distance"
-                    android:textColor="#783AFF"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:text="@string/user_info_run_distance"
+                    android:textColor="#783AFF" />
             </LinearLayout>
 
         </LinearLayout>
@@ -114,13 +130,13 @@
 
         <Button
             android:id="@+id/edit_user_info_btn"
-            android:text="@string/edit_info"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:textColor="@color/text_white"
-            android:background="@drawable/edit_info_btn_bg"
             android:layout_width="150dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/edit_info_btn_bg"
+            android:text="@string/edit_info"
+            android:textColor="@color/text_white" />
 
     </LinearLayout>
 
