--- a/app/src/main/res/layout/run_record_act.xml
+++ b/app/src/main/res/layout/run_record_act.xml
@@ -1,20 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:background="#76EEC6"
+    android:background="@drawable/bg_run_map"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:text="run "
-            android:layout_centerInParent="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </RelativeLayout>
+    <include
+        android:id="@+id/include_root_run_data"
+        layout="@layout/include_run_data"/>
 
 
     <RelativeLayout
