--- a/app/src/main/res/layout/include_run_map.xml
+++ b/app/src/main/res/layout/include_run_map.xml
@@ -1,15 +1,219 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="#897"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/back_to_data_btn"
-        android:layout_centerInParent="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:background="@drawable/run_map_white_bg"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="35dp"
+            android:layout_width="match_parent"
+            android:layout_height="120dp">
 
-</RelativeLayout>
+            <RelativeLayout
+
+                android:id="@+id/gps_content_root_relat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:id="@+id/gps_root_map_linear"
+                    android:layout_marginLeft="15dp"
+                    android:paddingLeft="9dp"
+                    android:paddingRight="4dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="8dp"
+                    android:background="@drawable/shape_gps_bg"
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp">
+
+                    <TextView
+                        android:textSize="12sp"
+                        android:text="@string/gps"
+                        android:layout_gravity="center"
+                        android:textColor="@color/gps_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                    <ImageView
+
+                        android:id="@+id/map_gps_iv"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="4dp"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/gps_0"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+                <TextView
+
+                    android:id="@+id/map_gps_prompt_tv"
+                    android:layout_toRightOf="@+id/gps_root_map_linear"
+                    android:layout_centerVertical="true"
+                    android:text="@string/gps_def_prompt"
+                    android:textSize="11sp"
+                    android:textColor="@color/gps_prompt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <ImageView
+                    android:id="@+id/back_run_data_iv"
+                    android:src="@drawable/close_back"
+                    android:layout_marginRight="20dp"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </RelativeLayout>
+
+            <View
+                android:id="@+id/run_map_line"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:background="@color/run_map_line"
+                android:layout_below="@+id/gps_content_root_relat"
+                android:layout_width="match_parent"
+                android:layout_height="1px"/>
+
+
+            <LinearLayout
+                android:layout_marginBottom="10dp"
+                android:gravity="bottom"
+                android:layout_alignParentBottom="true"
+                android:layout_below="@+id/run_map_line"
+                android:layout_marginLeft="15dp"
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <com.n1njac.yiqipao.android.ui.widget.RunDataTextView
+                    android:layout_gravity="center_horizontal"
+                    android:id="@+id/run_map_time_tv"
+                    android:textColor="#000"
+                    android:textSize="20sp"
+                    android:textStyle="normal"
+                    android:text="@string/run_data_time_default"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:layout_gravity="center_horizontal"
+                    android:textSize="12sp"
+                    android:layout_marginTop="2dp"
+                    android:textColor="@color/run_data_text"
+                    android:text="@string/run_data_time_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_marginBottom="10dp"
+                android:gravity="bottom"
+                android:layout_alignParentBottom="true"
+                android:id="@+id/distance_linear"
+                android:layout_below="@+id/run_map_line"
+                android:orientation="vertical"
+                android:layout_centerHorizontal="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <com.n1njac.yiqipao.android.ui.widget.RunDataTextView
+                    android:id="@+id/run_map_distance_tv"
+                    android:textColor="#000"
+                    android:textSize="31sp"
+                    android:text="@string/run_data_km_default"
+                    android:textStyle="normal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:textColor="@color/run_data_text"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/run_data_km_unit"
+                    android:textSize="12sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_marginBottom="10dp"
+                android:gravity="bottom"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="15dp"
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <com.n1njac.yiqipao.android.ui.widget.RunDataTextView
+                    android:layout_gravity="center_horizontal"
+                    android:id="@+id/run_map_speed_tv"
+                    android:textColor="#000"
+                    android:textSize="20sp"
+                    android:text="@string/run_data_speed_default"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:layout_gravity="center_horizontal"
+                    android:textSize="14sp"
+                    android:layout_marginTop="2dp"
+                    android:textColor="@color/run_data_text"
+                    android:text="@string/run_data_speed_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+        </RelativeLayout>
+
+
+        <LinearLayout
+            android:layout_marginBottom="35dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/run_map_stop_btn"
+                android:text="@string/run_btn_text_stop"
+                android:textColor="@color/text_white"
+                android:textSize="18sp"
+                android:visibility="invisible"
+                android:background="@drawable/shape_run_btn_stop"
+                android:layout_width="85dp"
+                android:layout_height="85dp" />
+            <Button
+                android:id="@+id/run_map_pause_btn"
+
+                android:text="@string/run_btn_text_pause"
+                android:textSize="18sp"
+                android:textColor="@color/text_white"
+                android:background="@drawable/shape_run_btn_pause"
+                android:layout_width="85dp"
+                android:layout_height="85dp" />
+            <Button
+                android:id="@+id/run_map_start_btn"
+                android:text="@string/run_btn_text_start"
+                android:textSize="18sp"
+                android:visibility="invisible"
+                android:textColor="@color/text_white"
+                android:background="@drawable/shape_run_btn_start"
+                android:layout_width="85dp"
+                android:layout_height="85dp" />
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+</FrameLayout>
