增加高德地图

--- a/app/src/main/res/layout/include_run_map.xml
+++ b/app/src/main/res/layout/include_run_map.xml
@@ -6,6 +6,12 @@
 
 
 
+    <com.amap.api.maps.MapView
+        android:id="@+id/run_map_mv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+
 
     <RelativeLayout
         android:layout_width="match_parent"
