--- a/app/src/main/res/layout/his_run_record_act.xml
+++ b/app/src/main/res/layout/his_run_record_act.xml
@@ -3,27 +3,461 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <RelativeLayout
         android:id="@+id/map_relat"
-        android:background="#999"
-        android:layout_marginBottom="223dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="223dp"
+        android:background="#999">
 
+    </RelativeLayout>
+
+    <RelativeLayout
+
+        android:background="#fff"
+        android:id="@+id/his_content_root"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/map_relat"
+        android:layout_marginTop="-223dp"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="35dp"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <com.n1njac.yiqipao.android.ui.widget.RunDataTextView
+
+                android:id="@+id/his_detail_distance_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="@string/def_his_distance"
+                android:textColor="@color/record_text"
+                android:textSize="33sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="公里"
+                android:textColor="@color/record_text"
+                android:textSize="12sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+
+            android:id="@+id/detail_ll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="120dp"
+            android:orientation="horizontal">
+
+            <LinearLayout
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <com.n1njac.yiqipao.android.ui.widget.RunDataTextView
+                    android:id="@+id/his_detail_duration_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/def_his_detail_distance"
+                    android:textColor="@color/record_text"
+                    android:textSize="21sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="3dp"
+                    android:text="@string/run_data_time_text"
+                    android:textColor="@color/record_text"
+                    android:textSize="12sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <com.n1njac.yiqipao.android.ui.widget.RunDataTextView
+                    android:id="@+id/his_detail_avspeed_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/run_data_speed_default"
+                    android:textColor="@color/record_text"
+                    android:textSize="21sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="3dp"
+                    android:text="@string/his_avspeed_text"
+                    android:textColor="@color/record_text"
+                    android:textSize="12sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <com.n1njac.yiqipao.android.ui.widget.RunDataTextView
+                    android:id="@+id/his_detail_calorie_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/def_calorie"
+                    android:textColor="@color/record_text"
+                    android:textSize="21sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="3dp"
+                    android:text="@string/def_calorie_text"
+                    android:textColor="@color/record_text"
+                    android:textSize="12sp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/his_detail_bg"
+            android:layout_width="match_parent"
+            android:layout_height="4dp"
+            android:layout_below="@+id/detail_ll"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="23dp"
+            android:background="@drawable/his_detail_gradient" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/his_detail_bg"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="9dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/his_slow_speed_text"
+                android:textColor="@color/record_text"
+                android:textSize="12sp" />
+
+            <com.n1njac.yiqipao.android.ui.widget.RunDataTextView
+                android:id="@+id/his_detail_slowest_speed_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/run_data_speed_default"
+                android:textColor="@color/record_text"
+                android:textSize="16sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignRight="@+id/his_detail_bg"
+            android:layout_below="@+id/his_detail_bg"
+            android:layout_marginTop="9dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/his_fast_speed_text"
+                android:textColor="@color/record_text"
+                android:textSize="12sp" />
+
+            <com.n1njac.yiqipao.android.ui.widget.RunDataTextView
+                android:id="@+id/his_detail_fast_speed_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/run_data_speed_default"
+                android:textColor="@color/record_text"
+                android:textSize="16sp" />
+
+        </LinearLayout>
 
     </RelativeLayout>
 
 
-    <ScrollView
-        android:background="#87d"
-        android:layout_marginTop="-223dp"
-        android:layout_below="@+id/map_relat"
+    <!--滑动后的整个大布局-->
+    <RelativeLayout
+        android:id="@+id/big_his_root"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </ScrollView>
+        <RelativeLayout
+
+            android:id="@+id/big_his_tool_bar"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            android:background="@color/bg_transparent">
+
+            <ImageView
+
+                android:visibility="gone"
+                android:id="@+id/his_detail_back_iv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="15dp"
+                android:src="@drawable/common_back" />
+
+            <TextView
+                android:id="@+id/his_tool_bar_title"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="@string/his_title"
+                android:textColor="@color/text_white"
+                android:textSize="20sp" />
+
+            <ImageView
+                android:visibility="gone"
+                android:id="@+id/his_detail_delete_iv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="70dp"
+                android:src="@drawable/his_delete" />
+
+            <ImageView
+                android:visibility="gone"
+                android:id="@+id/his_detail_share_iv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="15dp"
+                android:src="@drawable/his_share" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/big_his_content"
+            android:layout_width="match_parent"
+            android:layout_height="223dp"
+            android:layout_below="@+id/big_his_tool_bar"
+            android:background="#fff">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="35dp"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <com.n1njac.yiqipao.android.ui.widget.RunDataTextView
+
+                    android:id="@+id/big_his_detail_distance_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="@string/def_his_distance"
+                    android:textColor="@color/record_text"
+                    android:textSize="33sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/his_distance_text"
+                    android:textColor="@color/record_text"
+                    android:textSize="12sp" />
+
+            </LinearLayout>
 
 
+            <LinearLayout
+
+                android:id="@+id/big_detail_ll"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="120dp"
+                android:orientation="horizontal">
+
+                <LinearLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <com.n1njac.yiqipao.android.ui.widget.RunDataTextView
+                        android:id="@+id/big_his_detail_duration_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="@string/def_his_detail_distance"
+                        android:textColor="@color/record_text"
+                        android:textSize="21sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="3dp"
+                        android:text="@string/run_data_time_text"
+                        android:textColor="@color/record_text"
+                        android:textSize="12sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <com.n1njac.yiqipao.android.ui.widget.RunDataTextView
+                        android:id="@+id/big_his_detail_avspeed_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="@string/run_data_speed_default"
+                        android:textColor="@color/record_text"
+                        android:textSize="21sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="3dp"
+                        android:text="@string/his_avspeed_text"
+                        android:textColor="@color/record_text"
+                        android:textSize="12sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <com.n1njac.yiqipao.android.ui.widget.RunDataTextView
+                        android:id="@+id/big_his_detail_calorie_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="@string/def_calorie"
+                        android:textColor="@color/record_text"
+                        android:textSize="21sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="3dp"
+                        android:text="@string/def_calorie_text"
+                        android:textColor="@color/record_text"
+                        android:textSize="12sp" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/big_his_detail_bg"
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:layout_below="@+id/big_detail_ll"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="23dp"
+                android:background="@drawable/his_detail_gradient" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/big_his_detail_bg"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="9dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/his_slow_speed_text"
+                    android:textColor="@color/record_text"
+                    android:textSize="12sp" />
+
+                <com.n1njac.yiqipao.android.ui.widget.RunDataTextView
+                    android:id="@+id/big_his_detail_slowest_speed_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/run_data_speed_default"
+                    android:textColor="@color/record_text"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignRight="@+id/big_his_detail_bg"
+                android:layout_below="@+id/big_his_detail_bg"
+                android:layout_marginTop="9dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/his_fast_speed_text"
+                    android:textColor="@color/record_text"
+                    android:textSize="12sp" />
+
+                <com.n1njac.yiqipao.android.ui.widget.RunDataTextView
+                    android:id="@+id/big_his_detail_fast_speed_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/run_data_speed_default"
+                    android:textColor="@color/record_text"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/big_his_content"
+            android:background="#fff">
+
+            <TextView
+                android:id="@+id/big_his_prompt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="@string/his_def_prompt" />
+
+
+        </RelativeLayout>
+
+
+    </RelativeLayout>
 
 </RelativeLayout>
