--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -64,6 +64,7 @@
     <color name="run_map_line">#eeeeee</color>
     <color name="text_gray">#CCCCCC</color>
 
+    <color name="record_text">#4a4a4a</color>
 
 
 
